k8s-resources/service.yml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-java
  labels:
    app: helloworld-java
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  # type: LoadBalancer Uncomment it only for minikube testing
  selector:
    app: helloworld-java
