k8s-resources/ingress-stage.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: phoenix-java-stage-ingress
  annotations:
    kubernetes.io/ingress.class: internal-ingress
    kubernetes.io/tls-acme: "false"
spec:
  tls:
  - hosts:
      - phoenix-java-stage.nbs-shared-dev.aws.nbscloud.co.uk
    secretName: phoenix-java-stage-tls
  rules:
  - host: phoenix-java-stage.nbs-shared-dev.aws.nbscloud.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: harness-example-svc-blue
          servicePort: 80
